--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  margin: 20px;
+}
